# acme-prefect

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.acme_portal_sdk/: deployment_finder.py  deployment_promote.py  flow_deploy.py  flow_finder.py  static_flow_deploy_config.yaml
.github/workflows/: container.yml  deploy.yml  promote.yml  test.yml
deploy/examples/: fetch_yahoo_data_ecs_fargate.py  image_bug.py  yahoo_data_dev_deployment_local.py
docs/: mkdocs.yml
docs/docs/: api.md  install.md
src/acme_prefect/: _main.py  create_config_block.py  prefect.yaml  prefect_deploy.py
src/acme_prefect/deploy/: fetch_yahoo_data.py  fetch_yahoo_data_ecs_fargate.py
src/acme_prefect/flows/: example.py  fetch_yahoo_data.py  hello_dw.py  welcome.py
src/acme_prefect/flows/subflows/: example.py  sample.py  sample_two.py
