[build-system]
requires = [ "setuptools>=46.4.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_prefect"
version = "0.0.1"
description = "ACME integration of Prefect for Orchestration"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3.12", ]
dependencies = [ "python-dotenv", "prefect", "prefect-aws", "yfinance", "retry", "pandas", "pyarrow" ]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.scripts]
ap = "acme_prefect._main:main"

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"

[project.optional-dependencies]
dev = [
    "pytest", # for testing
    "uv", # for venv
    "mkdocs", # for documentation
    "mkdocs-material", # theme for mkdocs
    "mkdocstrings[python]", # mkdocs plugin to generate API docs from sources
    "jupyterlab", # for jupyter notebooks
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["acme_prefect"]
# https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
license-files = []
# [tool.setuptools.package-data]