[build-system]
requires = ["setuptools>=46.4.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_prefect"
version = "0.0.1"
description = "ACME integration of Prefect for Orchestration"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "prefect",
    "prefect-aws",
    "yfinance",
    "retry",
    "pandas",
    "pyarrow",
    "acme_config",
    "acme_dw",
    "acme_portal_sdk[prefect]"
]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.scripts]
ap = "acme_prefect._main:main"

[project.urls]
homepage = "https://blackwhitehere.github.io/acme-prefect/"
repository = "https://github.com/blackwhitehere/acme-prefect"

[project.optional-dependencies]
dev = [
    "pytest",               # for testing
    "uv",                   # for venv
    "mkdocs",               # for documentation
    "mkdocs-material",      # theme for mkdocs
    "mkdocstrings[python]", # mkdocs plugin to generate API docs from sources
    "jupyterlab",           # for jupyter notebooks
    "isort",                # for sorting imports
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
# https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
license-files = []
# [tool.setuptools.package-data]
